// secure-exchange.proto
// Secure Exchange Service gRPC API 定义
syntax = "proto3";

package secure_exchange;

// ==========================================
// Secure Exchange Service
// ==========================================
service SecureExchange {
    // 发送加密消息
    rpc SendEncryptedMessage(EncryptedMessageRequest) returns (EncryptedMessageResponse);
    
    // 获取用户的加密消息列表
    rpc GetEncryptedMessages(GetMessagesRequest) returns (MessageList);
    
    // 获取单个消息详情
    rpc GetMessageById(MessageIdRequest) returns (MessageDetail);
    
    // 标记消息为已读
    rpc MarkMessageAsRead(MessageIdRequest) returns (StatusResponse);
    
    // 删除/撤销消息
    rpc RevokeMessage(MessageIdRequest) returns (StatusResponse);
    
    // 批量标记已读
    rpc MarkMultipleAsRead(MultipleMessageIdRequest) returns (StatusResponse);
}

// ==========================================
// 请求消息
// ==========================================

// 发送加密消息请求
message EncryptedMessageRequest {
    string sender_address = 1;           // 发送者地址
    string recipient_address = 2;        // 接收者地址
    bytes encrypted_data = 3;            // 加密数据（已用发送者公钥加密）
    string data_type = 4;                // 数据类型（medication_plan, health_record等）
    string metadata = 5;                 // 元数据（JSON字符串）
    string timestamp = 6;                // 时间戳
}

// 获取消息列表请求
message GetMessagesRequest {
    string recipient_address = 1;        // 接收者地址
    int32 limit = 2;                     // 分页限制（默认50）
    int32 offset = 3;                    // 分页偏移
    string data_type = 4;                // 过滤数据类型（可选）
    bool unread_only = 5;                // 是否只获取未读消息
}

// 消息ID请求
message MessageIdRequest {
    string message_id = 1;               // 消息ID
    string user_address = 2;             // 用户地址（用于权限验证）
}

// 多个消息ID请求
message MultipleMessageIdRequest {
    repeated string message_ids = 1;     // 消息ID列表
    string user_address = 2;             // 用户地址
}

// ==========================================
// 响应消息
// ==========================================

// 发送加密消息响应
message EncryptedMessageResponse {
    string message_id = 1;               // 消息ID
    bytes encrypted_data = 2;            // 加密数据（用接收者公钥再次加密）
    string recipient_address = 3;        // 接收者地址
    string encrypted_at = 4;             // 加密时间
    bool success = 5;                    // 是否成功
    string error_message = 6;            // 错误信息（如果失败）
}

// 消息列表响应
message MessageList {
    repeated MessageSummary messages = 1; // 消息列表
    int32 total_count = 2;                // 总数
    int32 unread_count = 3;               // 未读数
    bool has_more = 4;                    // 是否还有更多
}

// 消息摘要
message MessageSummary {
    string message_id = 1;               // 消息ID
    string sender_address = 2;           // 发送者地址
    string data_type = 3;                // 数据类型
    string metadata = 4;                 // 元数据（JSON字符串）
    string encrypted_at = 5;             // 加密时间
    string read_at = 6;                  // 读取时间（NULL表示未读）
    bool is_read = 7;                    // 是否已读
}

// 消息详情响应
message MessageDetail {
    string message_id = 1;               // 消息ID
    string sender_address = 2;           // 发送者地址
    string recipient_address = 3;        // 接收者地址
    bytes encrypted_data = 4;            // 加密数据
    string data_type = 5;                // 数据类型
    string metadata = 6;                 // 元数据
    string encrypted_at = 7;             // 加密时间
    string read_at = 8;                  // 读取时间
    bool is_read = 9;                    // 是否已读
}

// 状态响应
message StatusResponse {
    bool success = 1;                    // 是否成功
    string message = 2;                  // 响应消息
    int32 affected_count = 3;            // 影响的记录数
}

