// src/rpc/server.js
// ==========================================
// Secure Exchange Service gRPCæœåŠ¡å™¨
// ==========================================
const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');
const exchangeHandlers = require('./handlers/exchange.handler');
const config = require('../config');

// Proto æ–‡ä»¶è·¯å¾„
const SECURE_EXCHANGE_PROTO_PATH = path.join(__dirname, '../../../proto/secure-exchange.proto');

/**
 * åˆ›å»ºå¹¶å¯åŠ¨ gRPC æœåŠ¡å™¨
 */
function startGrpcServer() {
  try {
    console.log('ğŸ”§ æ­£åœ¨åˆå§‹åŒ– gRPC æœåŠ¡å™¨...');

    // åŠ è½½ proto æ–‡ä»¶
    const packageDefinition = protoLoader.loadSync(SECURE_EXCHANGE_PROTO_PATH, {
      keepCase: true,
      longs: String,
      enums: String,
      defaults: true,
      oneofs: true,
    });

    // åŠ è½½ secure_exchange åŒ…
    const secureExchangeProto = grpc.loadPackageDefinition(packageDefinition).secure_exchange;

    if (!secureExchangeProto || !secureExchangeProto.SecureExchange) {
      throw new Error('Failed to load SecureExchange service from proto');
    }

    // åˆ›å»º gRPC æœåŠ¡å™¨
    const server = new grpc.Server();

    // ç»‘å®š SecureExchange æœåŠ¡çš„å¤„ç†å™¨
    server.addService(secureExchangeProto.SecureExchange.service, {
      SendEncryptedMessage: exchangeHandlers.sendEncryptedMessage,
      GetEncryptedMessages: exchangeHandlers.getEncryptedMessages,
      GetMessageById: exchangeHandlers.getMessageById,
      MarkMessageAsRead: exchangeHandlers.markMessageAsRead,
      RevokeMessage: exchangeHandlers.revokeMessage,
      MarkMultipleAsRead: exchangeHandlers.markMultipleAsRead
    });

    // ç»‘å®šå¹¶å¯åŠ¨æœåŠ¡å™¨
    const grpcPort = config.GRPC_PORT || 50051;
    server.bindAsync(
      `0.0.0.0:${grpcPort}`,
      grpc.ServerCredentials.createInsecure(),
      (err, port) => {
        if (err) {
          console.error('âŒ Failed to bind gRPC server:', err);
          return;
        }
        server.start();
        console.log('='.repeat(60));
        console.log(`âœ… gRPC æœåŠ¡å™¨å·²å¯åŠ¨`);
        console.log(`ğŸ“¡ gRPC Port:   ${port}`);
        console.log(`ğŸ” Service:     SecureExchange`);
        console.log('='.repeat(60));
      }
    );

    return server;
  } catch (error) {
    console.error('âŒ gRPC æœåŠ¡å™¨åˆå§‹åŒ–å¤±è´¥:', error);
    throw error;
  }
}

module.exports = { startGrpcServer };